--- a/app/src/main/res/layout/single_home_list_item.xml
+++ b/app/src/main/res/layout/single_home_list_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingLeft="4dp"
     android:paddingTop="2dp"
     android:paddingBottom="2dp"
-    android:background="#cdcdcd">
+    >
+
 
     <TextView
         android:id="@+id/name"
@@ -29,4 +30,4 @@
         android:layout_below="@+id/text"
         android:layout_alignParentBottom="true"/>
 
-</RelativeLayout>
+</LinearLayout>
