--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="evs.project.mingle.ActivityHome">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context="evs.project.mingle.ActivityHome"
+    >
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
