--- a/app/src/main/res/layout/travel.xml
+++ b/app/src/main/res/layout/travel.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/Enter date"
+        android:layout_toLeftOf="@+id/Enter_date"
         android:text="@string/src"
         android:textSize="25sp"
         />
@@ -53,7 +53,7 @@
         android:layout_marginTop="130dp"
         />
     <ListView
-    android:id="@+id/list of travels"
+    android:id="@+id/list_of_travels"
     android:layout_marginTop="185dp"
     android:layout_marginBottom="130dp"
     android:layout_width="wrap_content"
